<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateNoteActivity">

    <TextView
        android:id="@+id/editNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/edit"
        android:textColor="@color/orange"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/updateSaveButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@id/editNoteHeading"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/img_des"
        android:src="@drawable/baseline_add_task_24" />

    <EditText
        android:id="@+id/updateTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/editNoteHeading"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/orange_border"
        android:fontFamily="sans-serif-black"
        android:hint="@string/enter_title"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/updateContentEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/updateTitleEditText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/orange_border"
        android:fontFamily="sans-serif-black"
        android:gravity="top"
        android:hint="@string/enter_des"
        android:padding="12dp"
        android:textSize="20sp" />


</RelativeLayout>